--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "vue": "latest"
   },
   "devDependencies": {
+    "@nuxt/icon": "^1.5.0",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@vueuse/nuxt": "^11.0.3",
     "tailwind-scrollbar": "^3.1.0"
   }
 }
